# Sticky-Note

./: .gitignore  FEATURE_BACKLOG.md  LICENSE  README.md  package-lock.json  package.json
src/: hub.css  hub.html  hub.js  index.html  main.js  stack.html  stack.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  hub.json
src-tauri/note-store/: Cargo.toml
src-tauri/note-store/src/: crypto.rs  lib.rs  similarity.rs
src-tauri/note-store/tests/: persistence.rs
src-tauri/src/: lib.rs  main.rs
