[package]
name = "note-store"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Pure-logic persistence layer for the Sticky Notes app (no Tauri dependency)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
