[package]
name = "note-store"
version = "0.3.0"
edition = "2021"
rust-version = "1.77.2"
description = "Pure-logic persistence layer for the Sticky Notes app (no Tauri dependency)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Password protection: Argon2id key derivation + AES-256-GCM authenticated
# encryption for at-rest protected-note content. All local, no network.
argon2 = "0.5"
aes-gcm = "0.10"
getrandom = "0.2"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
